--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@ h4 {
 
 fieldset {
     display: inline-block;
-    background-color: blueviolet;
+    background-color: grey;
     border-color: black;
     box-shadow: 0px 5px 10px black;
     margin: 20px 0px;
